fixed img maxwidth on mobile

--- a/css/inner-page.css
+++ b/css/inner-page.css
@@ -876,4 +876,7 @@ iframe {
     display: flex !important;
     flex-direction: column;
   }
+  img {
+    max-width: 100%;
+  }
 }
